# Hand-Gesture-Desktop-Control

./: CameraStream.py  CursorMapper.py  FrameRenderer.py  HandTracker.py  MouseController.py  README.md  actions.py  app.py  main.py  pyproject.toml
.github/workflows/: python-app.yml
docs/: .~lock.MBH-Gesture Map.ods#  MBH-Gesture Map.ods
src/: app.py  config.py  main.py
src/camera/: __init__.py  camera_stream.py
src/control/: ActionDispatcher.py  MouseController.py  __init__.py  action_dispatcher.py  app_controller.py  mouse_controller.py  window_controller.py
src/debugging/: FrameRenderer.py  __init__.py  frame_renderer.py
src/gestures/: GestureInterpreter.py  __init__.py  cursor_mapper.py  dynamic_gesture_detector.py  gesture_interpreter.py  gesture_state.py  gesture_state_tracker.py  mode_manager.py
src/tracking/: HandTracker.py  __init__.py  hand_tracker.py
src/ui/: __init__.py  settings_window.py  status_widget.py
tests/: conftest.py  main.py  test_action_dispatcher.py  test_controllers.py  test_cursor_mapper.py  test_gesture_interpreter.py  test_gesture_state.py  test_mode_manager.py
