[project]
name = "mbh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.33",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "ruff>=0.15.12",
    "sounddevice>=0.5.5",
    "xdotool>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
